change gh commit email

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,7 +28,7 @@
   branch = false
 [user]
 	name = jimmoffet
-	email = jim.moffet@gsa.gov
+	email = jimmoffet@gmail.com
 [pull]
 	rebase = false
 [init]
