--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,5 @@
-# editorconfig.org
+# Check http://editorconfig.org for more information
+# This is the main config file for this project:
 root = true
 
 [*]
@@ -6,8 +7,11 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace=true
-indent_size = 4
+indent_size = 2
 indent_style = space
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.py]
+indent_size = 4
