--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -1,3 +1,11 @@
+# ~/.config/starship.toml
+
+# Timeout for commands executed by starship (in milliseconds)
+command_timeout = 750
+
+# Disable the blank line at the start of the prompt
+add_newline = false
+
 [character]
 success_symbol = "[λ](bold green)"
 error_symbol = "[λ](bold red)"
