--- a/zsh/.nanorc
+++ b/zsh/.nanorc
@@ -3,7 +3,6 @@
 # or here: https://www.nano-editor.org/dist/v3/nanorc.5.html
 
 # Editor:
-set morespace
 
 set tabstospaces
 set trimblanks
@@ -14,16 +13,14 @@ set constantshow
 
 set mouse
 
-# UX:
-set smooth
 
 # Extra files:
 set backup
-set backupdir "~/.nano-backups"
+# set backupdir "~/.nano-backups"
 set historylog
 
 # line numbers are copied with text,
 # it is not useful:
 # set linenumbers
 
-include /usr/share/nano/*
+include /usr/local/share/nano/*.nanorc
