--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-mybrewpath='/usr/local/Homebrew/bin/brew'
-mybrewpackages='/usr/local/share'
+mybrewpath='/opt/homebrew/bin/brew'
+mybrewpackages='/opt/homebrew/opt'
