--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-mybrewpath='/opt/homebrew/bin/brew'
-mybrewpackages='/opt/homebrew/opt'
+mybrewpath=/usr/local/Homebrew/bin/brew
+mybrewpackages=/usr/local/share
