--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,179 +1,62 @@
 {
-  // Debug:
-  "debug.allowBreakpointsEverywhere": true,
-  // Git:
-  "git.decorations.enabled": true,
-  "diffEditor.renderSideBySide": false,
-  // Editor:
-  "editor.accessibilitySupport": "off",
-  "editor.bracketPairColorization.enabled": false,
-  "editor.codeLens": true,
-  "editor.colorDecorators": true,
-  "editor.cursorSurroundingLines": 3,
-  "editor.dragAndDrop": false,
-  "editor.folding": false,
-  "editor.formatOnPaste": false,
-  "editor.gotoLocation.multipleReferences": "peek",
-  "editor.gotoLocation.multipleDefinitions": "peek",
-  "editor.gotoLocation.multipleDeclarations": "peek",
-  "editor.gotoLocation.multipleImplementations": "peek",
-  "editor.gotoLocation.multipleTypeDefinitions": "peek",
-  "editor.hover.enabled": true,
+  "editor.cursorSmoothCaretAnimation": false,
   "editor.fontSize": 13,
   "editor.fontFamily": "Hack Nerd Font",
   "editor.fontLigatures": true,
   "editor.formatOnSave": true,
-  "editor.glyphMargin": false,
-  "editor.hideCursorInOverviewRuler": false,
   "editor.inlineSuggest.enabled": true,
-  "editor.minimap.enabled": false,
-  "editor.occurrencesHighlight": false,
-  "editor.overviewRulerBorder": false,
-  "editor.quickSuggestions.comments": true,
-  "editor.renderWhitespace": "selection",
-  "editor.renderLineHighlight": "none",
-  "editor.rulers": [
-    120
-  ],
-  "editor.showFoldingControls": "mouseover",
-  "editor.scrollBeyondLastLine": false,
-  // "editor.snippetSuggestions": "none",
+  "editor.rulers": [120],
   "editor.suggestSelection": "first",
   "editor.tabCompletion": "on",
-  "editor.useTabStops": true,
   "editor.wordWrap": "wordWrapColumn",
   "editor.wordWrapColumn": 120,
-  // eslint:
   "eslint.defaultFormatter": "esbenp.prettier-vscode",
   "eslint.format.enable": true,
   "eslint.packageManager": "yarn",
   "eslint.quiet": true,
   "eslint.run": "onSave",
-  // Files:
-  "explorer.compactFolders": false,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
-  "explorer.decorations.badges": false,
-  "explorer.openEditors.visible": 0,
-  "files.associations": {
-    ".babelrc": "jsonc",
-    ".eslintrc": "jsonc",
-    "*.pyi": "python",
-    "*.bats": "shellscript",
-    "*.sh": "shellscript",
-    "*.nanorc": "shellscript",
-  },
-  "files.autoSave": "onFocusChange",
   "files.exclude": {
-    "**/.DS_Store": true,
     "**/node_modules": true,
-    "**/bower_components": true,
-    "**/__pycache__": true,
-    "**/.cache": true,
-    "**/.idea": true,
-    "**/.pytest_cache": true,
-    "**/.mypy_cache": true,
-    "**/.venv": true,
-    "**/.coverage": true,
-    "**/*.py[co]": true,
-    "**/htmlcoverage": true,
-    "**/docs/build": true,
     "**/.classpath": true,
     "**/.project": true,
     "**/.settings": true,
     "**/.factorypath": true,
     "**/Pods": true
   },
-  "search.mode": "newEditor",
-  // Extensions:
-  "extensions.ignoreRecommendations": true,
-  // Telemetry:
-  "telemetry.enableCrashReporter": false,
-  "telemetry.telemetryLevel": "off",
-  "telemetry.enableTelemetry": false,
-  // JS:
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  // Workbench:
-  "material-icon-theme.folders.theme": "specific",
-  "window.title": "",
-  "workbench.activityBar.visible": false,
-  "workbench.colorTheme": "Ayu Mirage",
-  "workbench.editorAssociations": {
-    "*.ipynb": "jupyter-notebook"
+  "files.associations": {
+    ".babelrc": "jsonc",
+    ".eslintrc": "jsonc",
+    "*.pyi": "python",
+    "*.bats": "shellscript",
+    "*.sh": "shellscript",
+    "*.nanorc": "shellscript"
   },
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "material-icon-theme.folders.theme": "specific",
+  "python.linting.enabled": false,
+  "python.jediEnabled": false,
+  "telemetry.enableCrashReporter": false,
+  "telemetry.enableTelemetry": false,
+  "terminal.external.osxExec": "iTerm",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "window.title": "",
+  "workbench.colorTheme": "Ayu Mirage",
   "workbench.iconTheme": "material-icon-theme",
   "workbench.statusBar.visible": true,
-  "workbench.colorCustomizations": {
-    "editorWarning.foreground": "#ffff00", // Warnings inside the file
-    "editorError.foreground": "#f66", // Errors inside the file
-    "list.warningForeground": "#e45bff", // Warnings on the file name
-    "list.errorForeground": "#f66", // Errors on the file name
-  },
   "zenMode.centerLayout": false,
   "zenMode.fullScreen": false,
   "zenMode.restore": true,
-  // Linting/Formatting:
-  "python.linting.enabled": false,
-  "python.jediEnabled": false,
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  // "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  // Shell:
-  "terminal.external.osxExec": "Alacritty",
-  "terminal.integrated.defaultProfile.osx": "zsh",
-  "terminal.integrated.defaultProfile.linux": "bash",
-  "terminal.integrated.enableBell": true,
-  // // Workbench:
-  // "window.clickThroughInactive": false,
-  // "window.newWindowDimensions": "maximized",
-  // "workbench.editor.labelFormat": "medium",
-  // "workbench.editor.tabCloseButton": "off",
-  // "workbench.startupEditor": "newUntitledFile",
-  // "workbench.statusBar.visible": false,
-  // "workbench.tips.enabled": false,
-  // "workbench.tree.renderIndentGuides": "none",
-  // "workbench.editor.showTabs": false,
-  // "workbench.editor.highlightModifiedTabs": false,
-  // "workbench.editor.showIcons": false,
-  // "workbench.editor.decorations.badges": false,
-  // "workbench.editor.decorations.colors": false,
-  // "workbench.layoutControl.enabled": false,
-  // // Tools, extensions, and languages:
-  // "problems.decorations.enabled": false,
-  // "git.autofetch": false,
-  // "git.showInlineOpenFileAction": false,
-  // "git.autorefresh": true,
-  // "git.decorations.enabled": true,
-  // "python.formatting.provider": "none",
-  // "python.pythonPath": "${workspaceFolder}/.venv/bin/python3",
-  // "python.terminal.activateEnvironment": true,
-  // "python.linting.enabled": false,
-  // "python.languageServer": "Pylance",
-  // "python.analysis.typeCheckingMode": "off",
-  // "python.analysis.autoImportCompletions": false,
-  // "python.analysis.diagnosticSeverityOverrides": {
-  //   "reportMissingImports": "none",
-  //   "reportUnusedVariable": "none",
-  // },
-  // "typescript.updateImportsOnFileMove.enabled": "never",
-  // "typescript.suggest.autoImports": false,
-  // "javascript.suggest.autoImports": false,
-  // "javascript.updateImportsOnFileMove.enabled": "never",
-  // "editor.semanticHighlighting.enabled": false,
+  "workbench.activityBar.visible": false,
+  "search.mode": "newEditor",
   // "workbench.colorCustomizations": {
-  //   "activityBar.activeBorder": "#e5b358",
-  //   "activityBar.foreground": "#797d7b",
-  //   "gitDecoration.modifiedResourceForeground": "#d4cb68",
-  //   "gitDecoration.addedResourceForeground": "#C2D94C",
-  //   "editorSuggestWidget.highlightForeground": "#e5b358",
-  //   "editorSuggestWidget.selectedBackground": "#1c2a42",
-  //   "tab.inactiveForeground": "#676b6a",
-  //   "sideBar.foreground": "#b3b1adBB",
-  //   "sideBarTitle.foreground": "#0a0e14",
-  //   // Disable wavy/squiggly underline in vscode
-  //   "editorError.foreground": "#00000000",
-  //   "editorWarning.foreground": "#00000000",
-  //   "editorInfo.foreground": "#00000000"
+  //   "editorWarning.foreground": "#ffff00", // Warnings inside the file
+  //   "editorError.foreground": "#f66", // Errors inside the file
+  //   "list.warningForeground": "#e45bff", // Warnings on the file name
+  //   "list.errorForeground": "#f66", // Errors on the file name
   // },
-  // "editor.unicodeHighlight.nonBasicASCII": false,
-  // "workbench.activityBar.visible": false,
+  "git.decorations.enabled": true,
+  "editor.experimental.stickyScroll.enabled": true
 }
