--- a/vscode/global-settings.json
+++ b/vscode/global-settings.json
@@ -57,4 +57,5 @@
         "list.errorForeground": "#f66", // Errors on the file name
     },
     "git.decorations.enabled": true,
+    "editor.experimental.stickyScroll.enabled": true,
 }
