--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,5 @@
   //   "list.errorForeground": "#f66", // Errors on the file name
   // },
   "git.decorations.enabled": true,
-  "editor.experimental.stickyScroll.enabled": true
+  "editor.stickyScroll.enabled": true
 }
