--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "editor.cursorSmoothCaretAnimation": false,
+  "editor.cursorSmoothCaretAnimation": "off",
   "editor.fontSize": 13,
   "editor.fontFamily": "Hack Nerd Font",
   "editor.fontLigatures": true,
