--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -74,6 +74,7 @@
     "**/.pytest_cache": true,
     "**/.mypy_cache": true,
     "**/.venv": true,
+    "**/venv": true,
     "**/.coverage": true,
     "**/*.py[co]": true,
     "**/htmlcoverage": true,
